--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,15 @@
 
 S3method(print,summary.thlm)
 S3method(print,thlm)
+S3method(summary,thlm)
 export(thlm)
+importFrom(graphics,abline)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
+importFrom(graphics,plot)
+importFrom(graphics,title)
 importFrom(stats,approx)
 importFrom(stats,coef)
 importFrom(stats,ecdf)
@@ -11,4 +19,11 @@ importFrom(stats,loess.smooth)
 importFrom(stats,model.extract)
 importFrom(stats,model.matrix)
 importFrom(stats,optimize)
+importFrom(stats,pnorm)
 importFrom(stats,printCoefmat)
+importFrom(stats,qnorm)
+importFrom(stats,runif)
+importFrom(stats,sd)
+importFrom(survival,Surv)
+importFrom(survival,coxph)
+importFrom(survival,survfit)
