Using Surv for covariate

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Linear Regression with a Randomly Censored Covariate
 Version: 1.0.1
 Date: 2019-05-20
 Author: Jing Qian, Sy Han (Steven) Chiou
-Maintainer: Sy Han (Steven) Chiou <schiou@hsph.harvard.edu>
+Maintainer: Jing Qian <qian@schoolph.umass.edu>
 Description: Implementations of threshold regression approaches for linear
 	     regression models with a covariate subject to random censoring,
 	     including deletion threshold regression and completion threshold regression.
