--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,11 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: r
+language: R
 sudo: false
 cache: packages
-sudo: false
 r:
-  - oldrel
-    env: R_REMOTES_NO_ERRORS_FROM_WARNINGS=true
   - release
   - devel
-before_install:
-  - tlmgr install index
-  - sudo apt-get update
-  - sudo apt-get install -y libxml2-dev
-pandoc_version: 2.2.3.2
-  
+repos:
+  CRAN: https://cloud.r-project.org
+  ropensci: http://packages.ropensci.org
