passed CRAN check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ importFrom(graphics,plot)
 importFrom(graphics,title)
 importFrom(stats,approx)
 importFrom(stats,coef)
+importFrom(stats,complete.cases)
 importFrom(stats,ecdf)
 importFrom(stats,lm)
 importFrom(stats,loess.smooth)
